--- a/src/index.css
+++ b/src/index.css
@@ -4,38 +4,6 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
-
-    --card: 0 0% 100%;
-    --card-foreground: 0 0% 3.9%;
-
-    --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 3.9%;
-
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
-
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
-
-    --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 45.1%;
-
-    --accent: 0 0% 96.1%;
-    --accent-foreground: 0 0% 9%;
-
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-
-    --border: 0 0% 89.8%;
-    --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
-
-    --radius: 0.5rem;
-  }
-
-  .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
 
@@ -80,7 +48,8 @@
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src: url(@fontsource/crushed/files/crushed-latin-400-normal.woff2)
+  src:
+    url(@fontsource/crushed/files/crushed-latin-400-normal.woff2)
       format("woff2"),
     url(@fontsource/crushed/files/crushed-latin-400-normal.woff) format("woff");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
@@ -94,7 +63,8 @@
   font-style: normal;
   font-display: swap;
   font-weight: 100;
-  src: url(@fontsource/lato/files/lato-latin-100-normal.woff2) format("woff2"),
+  src:
+    url(@fontsource/lato/files/lato-latin-100-normal.woff2) format("woff2"),
     url(@fontsource/lato/files/lato-latin-100-normal.woff) format("woff");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
@@ -107,7 +77,8 @@
   font-style: normal;
   font-display: swap;
   font-weight: 300;
-  src: url(@fontsource/lato/files/lato-latin-300-normal.woff2) format("woff2"),
+  src:
+    url(@fontsource/lato/files/lato-latin-300-normal.woff2) format("woff2"),
     url(@fontsource/lato/files/lato-latin-300-normal.woff) format("woff");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
@@ -120,7 +91,8 @@
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src: url(@fontsource/lato/files/lato-latin-400-normal.woff2) format("woff2"),
+  src:
+    url(@fontsource/lato/files/lato-latin-400-normal.woff2) format("woff2"),
     url(@fontsource/lato/files/lato-latin-400-normal.woff) format("woff");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
@@ -133,7 +105,8 @@
   font-style: normal;
   font-display: swap;
   font-weight: 700;
-  src: url(@fontsource/lato/files/lato-latin-700-normal.woff2) format("woff2"),
+  src:
+    url(@fontsource/lato/files/lato-latin-700-normal.woff2) format("woff2"),
     url(@fontsource/lato/files/lato-latin-700-normal.woff) format("woff");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
@@ -146,7 +119,8 @@
   font-style: normal;
   font-display: swap;
   font-weight: 900;
-  src: url(@fontsource/lato/files/lato-latin-900-normal.woff2) format("woff2"),
+  src:
+    url(@fontsource/lato/files/lato-latin-900-normal.woff2) format("woff2"),
     url(@fontsource/lato/files/lato-latin-900-normal.woff) format("woff");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
